<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_medicines">

    <fragment
        android:id="@+id/navigation_medicines"
        android:name="com.example.hw_03_m7.ui.medicines.MedicinesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_medicines" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hw_03_m7.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_make"
        android:name="com.example.hw_03_m7.ui.make.MakeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_make" />
</navigation>